objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Now () - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field tracks the number of days since the idea was submitted.</inlineHelpText>
        <label>Idea Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea_in_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea in Action</label>
        <referenceTo>SDO_Community_Ideas_Projects__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Reviewed</fullName>
                </value>
                <value>
                    <fullName>Under Consideration</fullName>
                </value>
                <value>
                    <fullName>Coming Soon</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>It&apos;s Been Reviewed, But Not Feasible At This Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Internal Ideas: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Obscene_entries</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS( Title, &quot;crap&quot;)</errorConditionFormula>
        <errorMessage>Please revise your post with appropriate language.</errorMessage>
    </validationRules>
</CustomObject>